--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,34 @@
 body {
   background-color: #f8f8f8;
+  font-family: "Open Sans", sans-serif;
+}
+
+.select-div {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.select-div-one,
+.select-div-two,
+.select-div-three {
+  width: 400px;
+  margin-bottom: 5px;
+}
+.btn {
+  margin-left: 155px;
+  margin-top: 5px;
 }
 
 .main-title {
   display: flex;
   justify-content: center;
-  font-family: "Open Sans", sans-serif;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .main-counter {
@@ -32,4 +55,8 @@ body {
 .incorrectAnswer {
   color: red;
   cursor: default;
+}
+
+.nav-header {
+  margin-top: 5px;
 }
